<resources>
    <string name="app_name">inl3</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last Name:</string>
    <string name="Edit">Edit profile</string>
    <string name="Your_details">Your details</string>
    <string name="Edit_details">Edit details</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>