<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/edit_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_layer_2"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/username"
            android:inputType="text"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            >

        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:inputType="textPassword">

        </EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress">

        </EditText>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/first_name"
            android:inputType="text">

        </EditText>

        <EditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/last_name"
            android:inputType="text">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Edit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_form" />

</androidx.constraintlayout.widget.ConstraintLayout>
